Fix block spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
 .title {
   background-color: #043a4c;
   color: white;
-  font-size: 50px;
+  font-size: 45px;
   font-weight: bold;
   text-align: center;
   padding: 50px 0;
@@ -38,14 +38,13 @@
   align-items: center;
 }
 
-h3 {
-  font-size: 26px;
-  margin-top: 80px;
-  margin-bottom: 0px;
-}
-
 .block {
-  margin-top: 30px;
+  .header {
+    font-size: 26px;
+    font-weight: bold;
+    text-align: center;
+  }
+
   font-size: 18px;
   line-height: 30px;
   text-align: justify;
@@ -62,13 +61,7 @@ h3 {
   &.with-background {
     background-color: #043a4c;
     color: white;
-
-    .subheader {
-      font-size: 26px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      text-align: center;
-    }
+    margin-top: 30px;
   }
 }
 
@@ -79,7 +72,7 @@ h3 {
   font-size: 20px;
   text-decoration: none;
   background-color: #3CA4C3;
-  margin-top: 20px;
+  margin: 20px 0;
   border-radius: 5px;
 
   svg {
